Updated README.md to use only JDK 8, and SBT 1.2.8.